latest changes on scrapper

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
             <strong>Ficheiro:</strong> <a href="{{ result[0] }}" target="_blank">{{ result[0] }}</a> <br>
             <strong>Página:</strong> {{ result[1] }} <br>
             <strong>Código:</strong> {{ result[2] }} <br>
-            <strong>Nome:</strong> {{ result[4] }} <br>
+            <!-- <strong>Nome:</strong> {{ result[4] }} <br> -->
             <strong>Lista:</strong> {{ result[3] }}
           </li>
         {% endfor %}
